--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
             <version>${junit.platform.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -62,7 +69,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        com.compuctor.Main
+                                        com.computor.Main
                                     </mainClass>
                                 </manifest>
                             </archive>
